Support utf8 characters by using StringBuilder instead of WTF::String::format() WTF::String::format() messes up with the utf8 characters. https://bugs.webkit.org/show_bug.cgi?id=37327